Closed
Bug 327740
Opened 19 years ago
Closed 19 years ago
wrong casts used in mozStorageAsyncIO
Categories
(Core :: SQLite and Embedded Database Bindings, defect)
Core
SQLite and Embedded Database Bindings
Tracking
()
RESOLVED
FIXED
People
(Reporter: pete_a90, Assigned: brettw)
Details
(Keywords: fixed1.8.1)
Attachments
(1 file)
7.83 KB,
patch
|
Details | Diff | Splinter Review |
User-Agent: Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.8b2) Gecko/20050503 Firefox/1.0+
Build Identifier:
http://lxr.mozilla.org/mozilla/source/storage/src/mozStorageAsyncIO.cpp
Every single NS_REINTERPRET_CAST in that file should be NS_STATIC_CAST.
Reproducible: Always
Steps to Reproduce:
Assignee | ||
Updated•19 years ago
|
Assignee: vladimir → brettw
Assignee | ||
Comment 1•19 years ago
|
||
Attachment #212828 -
Flags: first-review?(vladimir)
Attachment #212828 -
Flags: first-review?(vladimir) → first-review+
Assignee | ||
Comment 2•19 years ago
|
||
On branch and trunk
Updated•1 year ago
|
Product: Toolkit → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•