Bug 327740 r=vladimir Replaces REINTERPRET_CASTs with STATIC_CASTs in mozStorageAsyncIO.cpp